--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -1,3 +1,17 @@
-main {
-    background-image: url("../images/rqaqqo1djajpvvi1haj4cha0om8jetidkx9p0scx0b5jh7c1uamufvum2eofl8cq-.jpg");
+.slides {
+    display: none;
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {opacity: 0.4}
+    to {opacity: 1}
+}
+
+.full {
+    width: 100%;
 }
