edited some files
edited some files, mainly changed css, and fixed order tab being broken on homepage

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -67,6 +67,10 @@ footer {
     text-align: center;
 }
 
+.price {
+    float: right;
+}
+
 /* start menu bar formatting */
 .nav-bar {
     margin: 10;
