--- a/css/takeoutStyle.css
+++ b/css/takeoutStyle.css
@@ -1,36 +1,17 @@
-.rightside{
+.rightside {
     background-color: white;
     border: 20px solid gray;
 }
 
-.buttonContainer{
-    text-align: center;
-}
-
-.categories{
-    background-color: black;
-    color: white;
+.categories {
     padding: 10px 20px;
     font-size: 15px;
 }
 
-.cartlist{
-    background-color: gray;
+.cartlist {
     min-height: 750px;
 }
 
-.item{
-    background-color: black;
-    color: white;
-}
-
-.price
-{
-    float: right;
-}
-
-.price-box
-{
-    float: right;
+.price-box {
     text-align: right;
 }
