--- a/css/contactStyle.css
+++ b/css/contactStyle.css
@@ -1,3 +1,10 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+* {
+  box-sizing: border-box;
+}
+
 /* Style all font awesome icons */
 .fa {
   padding: 20px;
@@ -20,4 +27,23 @@
 /* Snapchat icon */
 .fa-snapchat {
   background: yellow;
+}
+
+input[type=text], select, textarea {
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+button {
+  background-color: #04AA6D;
+  padding: 12px 20px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #45a049;
 }
