--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -1,12 +1,15 @@
+/* Home page styles */
 .slides {
     display: none;
 }
 
+/* Names the animation and the duration */
 .fade {
     animation-name: fade;
     animation-duration: 1.5s;
 }
 
+/* Keyframes will go from 0.4 opacity to 1 */
 @keyframes fade {
     from {opacity: 0.4}
     to {opacity: 1}
