menu main tag has php
menu main tag display html using data from database through php

--- a/css/contactStyle.css
+++ b/css/contactStyle.css
@@ -1,10 +1,11 @@
 /* Changing the whole font */
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
 
 * {
   box-sizing: border-box;
+}
+
+.font {
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Style all font awesome icons */
